--- a/view/frontdesk_dashboard.html
+++ b/view/frontdesk_dashboard.html
@@ -140,6 +140,14 @@
                 <p style="text-align: right; margin-top: 20px; font-style: italic; font-size: 0.9em;">
                     Note: Only the Mechanic can update job status or deduct inventory.
                 </p>
+
+                <div id="detailPartsList">
+                    </div>
+
+                <div id="paymentActionDiv">
+                    </div>
+
+                <button class="close-button" ...>&times;</button>
             </div>
         </section>
     </main>
