--- a/view/frontdesk_dashboard.html
+++ b/view/frontdesk_dashboard.html
@@ -121,8 +121,8 @@
             </div>
         </section>
         <section id="jobDetailModalFdesk" class="modal">
-            <div class="modal-content" style="max-width: 600px;">
-                <span class="close-button" style="cursor: pointer;">&times;</span> 
+            <div class="modal-content">
+                <span class="close-button" onclick="document.getElementById('jobDetailModalFdesk').style.display='none';">&times;</span> 
                 <h3 style="color: #2F3590;">Booking Details: <span id="detailPlateNo"></span></h3>
                 
                 <div class="job-info-grid" style="grid-template-columns: 1fr;">
