--- a/view/mechanic_dashboard.html
+++ b/view/mechanic_dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mechanic Portal - Davao Supreme Motors</title>
-    <link rel="stylesheet" href="/model/style.css">
+    <link rel="stylesheet" href="../model/style.css">
 </head>
 <body>
     <header class="main-header">
