--- a/view/mechanic_dashboard.html
+++ b/view/mechanic_dashboard.html
@@ -65,6 +65,6 @@
         </section>
     </main>
 
-    <script src="/controller/script.js"></script>
+    <script src="../controller/script.js"></script>
 </body>
 </html>
