--- a/view/owner_dashboard.html
+++ b/view/owner_dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Management Portal - Davao Supreme Motors</title>
-    <link rel="stylesheet" href="/model/style.css"> 
+    <link rel="stylesheet" href="../model/style.css"> 
 </head>
 <body>
     <header class="main-header">
@@ -119,6 +119,6 @@
         </section>
     </main>
 
-    <script src="/controller/script.js"></script> 
+    <script src="../controller/script.js"></script> 
 </body>
 </html>
